2010-10-07  John W. Eaton  <jwe@octave.org>

	* file-io.cc (do_stream_open): Use fileno instead of ::fileno to
	avoid problems if fileno is a macro.

2010-10-05  John W. Eaton  <jwe@octave.org>

	* oct-stdstrm.h (octave_stdiostream::octave_stdiostream): Use
	fileno instead of ::fileno to avoid problems if fileno is a macro.

2010-10-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in (axis::properties::pixel_size): New function.
	(axis::properties::pixel_xsize,axis::properties::pixel_ysize):
	New functions, use axis::properties::pixel_size
	(axis::properties::update_ydata,axis::properties::update_xdata):
	Use axis::properties::pixel_size functions

	* graphics.cc (__image_pixel_size__): New function uses
	axis::properties::pixel_size functions

2010-10-01  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (class caseless_str): Move to
	liboctave/caseless-string.h.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* graphics.cc (base_properties::get_dynamic): Create and return
	octave_scalar_map object instead of Octave_map.
	(base_graphics_object::remove_all_listeners): Use octave_map
	instead of Octave_map.
	(base_graphics_object::values_as_string): Likewise.

	* graphics.h.in, graphics.cc (property_list::as_struct):
	Return octave_scalar_map instead of Octave_map.
	(base_graphics_object::values_as_struct): Likewise.
	(graphics_object:values_as_struct): Likewise.
	(graphics_object::set): Accept octave_map instead of Octave_map.

	* genprops.awk: Use octave_map instead of Octave_map in
	generated code.  Convert second arg to octave_value in call to
	octave_map::assign.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_struct::as_octave_value): Use octave_map
	instead of Octave_map.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* ov-base.h: Delete forward decl for Octave_map class.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* ov-struct.h (octave_struct (const Octave_map&)): Delete constructor.

2010-10-01  John W. Eaton  <jwe@octave.org>